@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<schema targetNamespace="urn:oasis:names:tc:wsrp:v1:types"
+	xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns="http://www.w3.org/2001/XMLSchema"
+	xmlns:types="urn:oasis:names:tc:wsrp:v1:types" elementFormDefault="qualified">
+	
+	<xsd:simpleType name="IVRData">
+		<xsd:restriction base="xsd:hexBinary">
+			<xsd:minLength value="0" />
+			<xsd:maxLength value="20" />
+		</xsd:restriction>
+	</xsd:simpleType>
+
+	<xsd:element name="callData">
+		<xsd:complexType>
+			<xsd:sequence>
+				<xsd:element name="ivrData" type="types:IVRData" minOccurs="0" />
+			</xsd:sequence>
+		</xsd:complexType>
+	</xsd:element>
+	
+</schema>
